[gd_scene load_steps=12 format=3 uid="uid://dyc4jly4545lv"]

[ext_resource type="Script" path="res://Weapons/gun.gd" id="1_7pc77"]
[ext_resource type="PackedScene" uid="uid://dksmiv5b6b6sy" path="res://Weapons/bullet.tscn" id="2_b56ix"]
[ext_resource type="PackedScene" uid="uid://bbittxxf4lj7u" path="res://Weapons/BulletSpawns/bullet_spawn_center.tscn" id="3_3lobq"]
[ext_resource type="Texture2D" uid="uid://clb1mvikw2hti" path="res://Weapons/Materials/muzzle_flash.png" id="4_xouu1"]

[sub_resource type="Animation" id="Animation_ow048"]
resource_name = "Drop"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="Animation" id="Animation_56bl8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gtdmo"]
resource_name = "Recoil"
length = 0.09
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.09),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0872665, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01, 0.09),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.1), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_o65jh"]
resource_name = "Reload"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.436332, 0, 0), Vector3(0.436332, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"refill_mag"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p5anp"]
_data = {
"Drop": SubResource("Animation_ow048"),
"RESET": SubResource("Animation_56bl8"),
"Recoil": SubResource("Animation_gtdmo"),
"Reload": SubResource("Animation_o65jh")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lvj1c"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("4_xouu1")
emission_enabled = true
emission = Color(0.670588, 0.568627, 0.286275, 1)

[sub_resource type="QuadMesh" id="QuadMesh_02lwj"]
material = SubResource("StandardMaterial3D_lvj1c")

[node name="Gun" type="Node3D"]
script = ExtResource("1_7pc77")
bullet = ExtResource("2_b56ix")
fire_mode = 0
BulletSpawns = Array[PackedScene]([ExtResource("3_3lobq")])

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p5anp")
}

[node name="MeshGun" type="Node3D" parent="."]

[node name="Muzzle" type="Node3D" parent="."]
transform = Transform3D(-0.999998, 0, -8.74226e-08, 0, 0.999999, 0, 8.74226e-08, 0, -0.999998, 0, 0, 0)

[node name="MuzzleFlash" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="MuzzleFlash"]
transform = Transform3D(3.64604e-06, 0, -12.3782, 0, 16.3181, 0, 27.8039, 0, 1.62321e-06, 0, 0, 0)
mesh = SubResource("QuadMesh_02lwj")
skeleton = NodePath("../../Muzzle")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MuzzleFlash"]
transform = Transform3D(-5.5449e-13, 14.5077, 4.66364e-07, -3.64604e-06, -6.34153e-07, 10.6692, 27.8039, 0, 1.39909e-06, 0, 0, 0)
mesh = SubResource("QuadMesh_02lwj")
skeleton = NodePath("../../Muzzle")

[node name="OmniLight3D" type="OmniLight3D" parent="MuzzleFlash"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.27502)
light_color = Color(1, 0.737255, 0.478431, 1)
light_energy = 1.5
omni_range = 76.7098

[node name="Timer" type="Timer" parent="MuzzleFlash"]

[node name="AudioShoot" type="AudioStreamPlayer2D" parent="."]

[node name="AudioReload" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
